--- a/css/main.css
+++ b/css/main.css
@@ -33,7 +33,7 @@ body {
   background-size: cover;
   color: #fff;
   text-align: center;
-  font-family: 'cursive', sans-serif; }
+  font-family: 'fantasy', sans-serif; }
 
 /* Extra markup and styles for table-esque vertical and horizontal centering */
 .site-wrapper {
